# cpp-learning

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md
.claude/agents/: cpp-module-verifier.md  socratic-code-tutor.md
01_fundamentals/: CMakeLists.txt  main.cpp
02_functions_and_scope/: CMakeLists.txt  main.cpp
03_pointers_and_references/: CMakeLists.txt  main.cpp
04_oop_basics/: CMakeLists.txt  main.cpp
05_operator_overloading/: CMakeLists.txt  main.cpp
06_stl_containers/: CMakeLists.txt  main.cpp
07_stl_algorithms/: CMakeLists.txt  main.cpp
08_templates_basics/: CMakeLists.txt  main.cpp
09_error_handling/: CMakeLists.txt  main.cpp
10_move_semantics/: CMakeLists.txt  main.cpp
11_smart_pointers/: CMakeLists.txt  main.cpp
12_lambdas_functionals/: CMakeLists.txt  main.cpp
13_concurrency_basics/: CMakeLists.txt  main.cpp
14_atomic_memory_model/: CMakeLists.txt  main.cpp
15_advanced_templates/: CMakeLists.txt  main.cpp
16_concepts_cpp20/: CMakeLists.txt  main.cpp
17_ranges_cpp20/: CMakeLists.txt  main.cpp
18_coroutines_cpp20/: CMakeLists.txt  main.cpp
19_data_structures/: CMakeLists.txt  main.cpp
20_lock_free_programming/: CMakeLists.txt  main.cpp
21_memory_and_allocators/: CMakeLists.txt  main.cpp
22_cache_optimization/: CMakeLists.txt  main.cpp
23_parallel_algorithms/: CMakeLists.txt  main.cpp
24_cpp23_features/: CMakeLists.txt  main.cpp
25_advanced_coroutines/: CMakeLists.txt  main.cpp
26_simd_vectorization/: CMakeLists.txt  main.cpp
27_low_latency_patterns/: CMakeLists.txt  main.cpp
28_robotics_patterns/: CMakeLists.txt  main.cpp
